--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <button class="header__feedback-btn">
             Отправить заявку
         </button>
+
+        <div class="header__language language">
+            <div class="language__title">RU</div>
+        </div>
     </div>
     <div class="header__slider swiper">
         <div class="swiper-wrapper">
