--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </button>
 
         <div class="header__language language">
-            <div class="language__title">RU</div>
+            <div class="language__title">
+                <img src="./assets/icons/arrow-down.png" class="language__title-icon" alt="">
+                <span>Ru</span>
+            </div>
         </div>
     </div>
     <div class="header__slider swiper">
