--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <img src="./assets/icons/arrow-down.png" class="language__title-icon" alt="">
                 <span>Ru</span>
             </div>
+            <div class="language__dropdown dropdown">
+                <ul class="dropdown__list">
+                    <li class="dropdown__item">Ru</li>
+                    <li class="dropdown__item">Uz</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="header__slider swiper">
