--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="get__line get__line--bottom"></div>
     </section>
     <section class="sale">
-        <h2 class="section__title">Продавать с ZOODPAY просто</h2>
+        <h2 class="section__title">Продавать с <span>ZOOD</span>PAY просто</h2>
         <div class="sale__items">
              <div class="sale__item">
                  <div class="sale__img">
@@ -109,7 +109,7 @@
     </section>
     <section class="think">
         <h2 class="section__title">Вы еще думаете?</h2>
-        <p class="think__subtitle">Нам уже доверяют более 1 500 магазинов</p>
+        <p class="section__subtitle">Нам уже доверяют более 1 500 магазинов</p>
         <div class="think__slider swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide think__slide">
@@ -175,7 +175,7 @@
     <section class="become-partner">
         <div class="sale__line become-partner__line"></div>
         <h2 class="section__title become-partner__title">Как стать Партнером ZOODPAY?</h2>
-        <p class="think__subtitle">Все просто!</p>
+        <p class="section__subtitle become-partner__subtitle">Все просто!</p>
         <div class="become-partner__block">
             <div class="become-partner__item">
                 <div class="become-partner__item-number">1</div>
