--- a/index.html
+++ b/index.html
@@ -47,165 +47,173 @@
     </div>
 </header>
 
-<main class="container">
+<main>
     <section class="get">
-        <div class="get__line get__line--top"></div>
-        <h2 class="section__title get__title">Вы получите:</h2>
-        <div class="get__block">
-            <div class="get__images">
-                <img src="./assets/images/things.png" alt="Things">
+        <div class="container">
+            <div class="get__line get__line--top"></div>
+            <h2 class="section__title get__title">Вы получите:</h2>
+            <div class="get__block">
+                <div class="get__images">
+                    <img src="./assets/images/things.png" alt="Things">
+                </div>
+                <div class="get__items">
+                    <div class="get__item">
+                        <div class="get__item-image">
+                            <img src="./assets/icons/user.svg" alt="User Icon">
+                        </div>
+                        <h3 class="get__item-title">Поток новых клиентов</h3>
+                        <p class="get__item-description">более 1,5 млн клиентов уже совершили <br> покупки с <span>ZOOD</span>PAY</p>
+                    </div>
+                    <div class="get__item">
+                        <div class="get__item-image">
+                            <img src="./assets/icons/bag.svg" alt="User Icon">
+                        </div>
+                        <h3 class="get__item-title">Увеличение среднего чека на <br> 20% и более</h3>
+                    </div>
+                    <div class="get__item">
+                        <div class="get__item-image">
+                            <img src="./assets/icons/currency.svg" alt="User Icon">
+                        </div>
+                        <h3 class="get__item-title">Увеличение оборота на 30% и более</h3>
+                    </div>
+                </div>
             </div>
-            <div class="get__items">
-                <div class="get__item">
-                    <div class="get__item-image">
-                        <img src="./assets/icons/user.svg" alt="User Icon">
-                    </div>
-                    <h3 class="get__item-title">Поток новых клиентов</h3>
-                    <p class="get__item-description">более 1,5 млн клиентов уже совершили <br> покупки с ZOODPAY</p>
-                </div>
-                <div class="get__item">
-                    <div class="get__item-image">
-                        <img src="./assets/icons/bag.svg" alt="User Icon">
-                    </div>
-                    <h3 class="get__item-title">Увеличение среднего чека на <br> 20% и более</h3>
-                </div>
-                <div class="get__item">
-                    <div class="get__item-image">
-                        <img src="./assets/icons/currency.svg" alt="User Icon">
-                    </div>
-                    <h3 class="get__item-title">Увеличение оборота на 30% и более</h3>
-                </div>
-            </div>
+            <div class="get__line get__line--bottom"></div>
         </div>
-        <div class="get__line get__line--bottom"></div>
     </section>
     <section class="sale">
-        <h2 class="section__title">Продавать с <span>ZOOD</span>PAY просто</h2>
-        <div class="sale__items">
-             <div class="sale__item">
-                 <div class="sale__img">
-                     <img src="assets/icons/tovar.png" alt="">
-                 </div>
+        <div class="container">
+            <h2 class="section__title">Продавать с <span>ZOOD</span>PAY просто</h2>
+            <div class="sale__items">
+                <div class="sale__item">
+                    <div class="sale__img">
+                        <img src="assets/icons/tovar.png" alt="">
+                    </div>
 
-                 <h4 class="sale__item-description">Клиент выбирает товар&nbsp;или&nbsp;услугу</h4>
-             </div>
-            <div class="sale__item">
-                <div class="sale__img">
-                    <img src="assets/icons/qr-code.png" alt="">
+                    <h4 class="sale__item-description">Клиент выбирает товар&nbsp;или&nbsp;услугу</h4>
                 </div>
+                <div class="sale__item">
+                    <div class="sale__img">
+                        <img src="assets/icons/qr-code.png" alt="">
+                    </div>
 
-                <h4 class="sale__item-description">Сканирует QR код на&nbsp;Вашем устройстве</h4>
-            </div>
-            <div class="sale__item">
-                <div class="sale__img">
-                    <img src="assets/icons/payment.png" alt="">
+                    <h4 class="sale__item-description">Сканирует QR код на&nbsp;Вашем устройстве</h4>
                 </div>
+                <div class="sale__item">
+                    <div class="sale__img">
+                        <img src="assets/icons/payment.png" alt="">
+                    </div>
 
-                <h4 class="sale__item-description">Подтверждает оплату</h4>
+                    <h4 class="sale__item-description">Подтверждает оплату</h4>
+                </div>
             </div>
+
+            <div class="sale__line"></div>
         </div>
-
-        <div class="sale__line"></div>
     </section>
     <section class="think">
-        <h2 class="section__title">Вы еще думаете?</h2>
-        <p class="section__subtitle">Нам уже доверяют более 1 500 магазинов</p>
-        <div class="think__slider swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/1.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/2.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/3.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/4.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/5.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/6.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/7.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/8.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/9.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/10.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/11.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/12.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/13.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/14.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/15.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/16.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/17.png" alt="Partners logo">
-                </div>
-                <div class="swiper-slide think__slide">
-                    <img src="./assets/images/logos/18.png" alt="Partners logo">
+        <div class="container">
+            <h2 class="section__title">Вы еще думаете?</h2>
+            <p class="section__subtitle">Нам уже доверяют более 1 500 магазинов</p>
+            <div class="think__slider swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/1.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/2.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/3.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/4.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/5.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/6.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/7.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/8.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/9.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/10.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/11.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/12.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/13.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/14.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/15.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/16.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/17.png" alt="Partners logo">
+                    </div>
+                    <div class="swiper-slide think__slide">
+                        <img src="./assets/images/logos/18.png" alt="Partners logo">
+                    </div>
                 </div>
             </div>
+            <button class="think__btn feedback-btn">
+                Отправить заявку
+            </button>
         </div>
-        <button class="think__btn feedback-btn">
-            Отправить заявку
-        </button>
     </section>
     <section class="become-partner">
-        <div class="sale__line become-partner__line"></div>
-        <h2 class="section__title become-partner__title">Как стать Партнером ZOODPAY?</h2>
-        <p class="section__subtitle become-partner__subtitle">Все просто!</p>
-        <div class="become-partner__block">
-            <div class="become-partner__item">
-                <div class="become-partner__item-number">1</div>
-                <img src="assets/icons/edit.png" class="become-partner__item-icon" alt="">
-                <h3 class="become-partner__item-title">Оставляете заявку</h3>
-                <p class="become-partner__item-subtitle">с Вами в течении 2х дней свяжется наш специалист</p>
+        <div class="container">
+            <div class="sale__line become-partner__line"></div>
+            <h2 class="section__title become-partner__title">Как стать Партнером <span>ZOOD</span>PAY?</h2>
+            <p class="section__subtitle become-partner__subtitle">Все просто!</p>
+            <div class="become-partner__block">
+                <div class="become-partner__item">
+                    <div class="become-partner__item-number">1</div>
+                    <img src="assets/icons/edit.png" class="become-partner__item-icon" alt="">
+                    <h3 class="become-partner__item-title">Оставляете заявку</h3>
+                    <p class="become-partner__item-subtitle">с Вами в течении 2х дней свяжется наш специалист</p>
+                </div>
+                <div class="become-partner__item">
+                    <div class="become-partner__item-number">2</div>
+                    <img src="assets/icons/analytics.png" class="become-partner__item-icon" alt="">
+                    <h3 class="become-partner__item-title">презентациЯ</h3>
+                    <p class="become-partner__item-subtitle">расскажем подробно условия сотрудничества</p>
+                </div>
+                <div class="become-partner__item">
+                    <div class="become-partner__item-number">3</div>
+                    <img src="assets/icons/file-edit.png" class="become-partner__item-icon" alt="">
+                    <h3 class="become-partner__item-title">Подписываем договор</h3>
+                    <p class="become-partner__item-subtitle">и подключаем к системе</p>
+                </div>
+                <div class="become-partner__item">
+                    <div class="become-partner__item-number">4</div>
+                    <img src="assets/icons/briefcase.png" class="become-partner__item-icon" alt="">
+                    <h3 class="become-partner__item-title">РЕЗУЛЬТАТ</h3>
+                    <p class="become-partner__item-subtitle">получаете увеличение продаж и новых клиентов</p>
+                </div>
             </div>
-            <div class="become-partner__item">
-                <div class="become-partner__item-number">2</div>
-                <img src="assets/icons/analytics.png" class="become-partner__item-icon" alt="">
-                <h3 class="become-partner__item-title">презентациЯ</h3>
-                <p class="become-partner__item-subtitle">расскажем подробно условия сотрудничества</p>
-            </div>
-            <div class="become-partner__item">
-                <div class="become-partner__item-number">3</div>
-                <img src="assets/icons/file-edit.png" class="become-partner__item-icon" alt="">
-                <h3 class="become-partner__item-title">Подписываем договор</h3>
-                <p class="become-partner__item-subtitle">и подключаем к системе</p>
-            </div>
-            <div class="become-partner__item">
-                <div class="become-partner__item-number">4</div>
-                <img src="assets/icons/briefcase.png" class="become-partner__item-icon" alt="">
-                <h3 class="become-partner__item-title">РЕЗУЛЬТАТ</h3>
-                <p class="become-partner__item-subtitle">получаете увеличение продаж и новых клиентов</p>
-            </div>
-        </div>
 
-        <button class="become-partner__btn feedback-btn">
-            Отправить заявку
-        </button>
+            <button class="become-partner__btn feedback-btn">
+                Отправить заявку
+            </button>
+        </div>
     </section>
 </main>
 
