feat: some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Lato:wght@100;400;700;900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="./styles/swiper.min.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
@@ -297,6 +297,6 @@
 </footer>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
