--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </div>
 </footer>
 
-<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+<script src="js/swiper.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
