feat: fix some bugs

--- a/index.html
+++ b/index.html
@@ -24,40 +24,64 @@
         <h3 class="feedback__popup-title">Форма заявки</h3>
         <form>
             <div class="feedback__popup-form">
-                <div class="form__field form__field-required">
-                    <select>
-                        <option value="Город">Город</option>
-                        <option value="Город">Ташкент</option>
-                        <option value="Город">Самарканд</option>
-                        <option value="Город">Навои</option>
-                    </select>
+                <div>
+                    <div class="form__field form__field-required">
+                        <select>
+                            <option value="Город">Город</option>
+                            <option value="Город">Ташкент</option>
+                            <option value="Город">Самарканд</option>
+                            <option value="Город">Навои</option>
+                        </select>
+                    </div>
+                    <p class="form__field-error">Заполните поле</p>
                 </div>
-                <div class="form__field form__field-required">
-                    <input type="text" placeholder="Название магазина">
+                <div>
+                    <div class="form__field form__field-required">
+                        <input type="text" placeholder="Название магазина">
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <input type="text" placeholder="Количество магазинов">
+                <div>
+                    <div class="form__field form__field-required">
+                        <input type="text" placeholder="Количество магазинов">
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <select>
-                        <option value="">Категория</option>
-                    </select>
+                <div>
+                    <div class="form__field form__field-required">
+                        <select>
+                            <option value="">Категория</option>
+                        </select>
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <select>
-                        <option value="">Сабкатегория</option>
-                    </select>
+                <div>
+                    <div class="form__field form__field-required">
+                        <select>
+                            <option value="">Сабкатегория</option>
+                        </select>
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <input type="text" placeholder="Имя">
+                <div>
+                    <div class="form__field form__field-required">
+                        <input type="text" placeholder="Имя">
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <input type="text" placeholder="Номер телефона">
+                <div>
+                    <div class="form__field form__field-required">
+                        <input type="text" placeholder="Номер телефона">
+                    </div>
+<!--                    <p class="form__field-error">Заполните по.ле</p>-->
                 </div>
-                <div class="form__field form__field-required">
-                    <select>
-                        <option value="">Должность инициатора</option>
-                    </select>
+                <div>
+                    <div class="form__field form__field-required">
+                        <select>
+                            <option value="">Должность инициатора</option>
+                        </select>
+                    </div>
+<!--                    <p class="form__field-error">Заполните поле</p>-->
                 </div>
                 <div>
                     <label for="shop-photo-outside" class="form__upload-label">
